--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "Marble Blast Web",
+	"name": "Marble Blast Powered Up Web",
 	"short_name": "Marble Blast",
-	"description": "A web port of Marble Blast Gold and Marble Blast Platinum: In this 3D platformer classic, race your marble to the finish as fast as possible in more than 4100 diverse levels taken from Marble Blast Gold, Platinum and Ultra. Play Marble Blast online right in your browser or on your mobile device.",
+	"description": "A web port of Marble Blast Powered Up: In this 3D platformer classic, race your marble to the finish as fast as possible in more than 150 new Original levels. Play Marble Blast Powered Up online right in your browser or on your mobile device.",
 	"dir": "ltr",
 	"start_url": "/index.html?app=true",
 	"scope": "/",
